--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-html, body {
-  height: 100%;
-}
+
+
+/* Agrega más estilos según las necesidades de tu App */
 
                                                                                                                   
